--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "solve": "bash scripts/solve.sh",
     "daily": "bash scripts/daily.sh",
     "progress": "bash scripts/progress.sh",
-    "sync-challenges": "git submodule update --remote --merge"
+    "sync-challenges": "git submodule update --remote --merge",
+    "check-updates": "pnpm outdated",
+    "update-deps": "pnpm update --interactive"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.0.0",
     "@total-typescript/ts-reset": "^0.5.1",
     "@type-challenges/utils": "^0.1.1",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitest/ui": "^1.3.0",
@@ -28,6 +30,8 @@
     "vitest": "^1.3.0"
   },
   "engines": {
-    "node": ">=24.0.0"
-  }
+    "node": ">=20.0.0",
+    "pnpm": ">=8.0.0"
+  },
+  "packageManager": "pnpm@8.15.0"
 }
