--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "my-type-challenges",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@8.15.0",
   "type": "module",
   "scripts": {
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "lint": "eslint . --fix",
-    "format": "eslint . --fix",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "solve": "bash scripts/solve.sh",
     "daily": "bash scripts/daily.sh",
     "progress": "bash scripts/progress.sh",
-    "sync-challenges": "git submodule update --remote --merge",
+    "sync-original": "git submodule update --remote --merge",
     "check-updates": "pnpm outdated",
     "update-deps": "pnpm update --interactive"
   },
@@ -28,10 +29,5 @@
     "tsx": "^4.7.0",
     "typescript": "^5.4.0",
     "vitest": "^1.3.0"
-  },
-  "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=8.0.0"
-  },
-  "packageManager": "pnpm@8.15.0"
+  }
 }
