--- a/package.json
+++ b/package.json
@@ -5,27 +5,17 @@
   "packageManager": "pnpm@8.15.0",
   "type": "module",
   "scripts": {
-    "test": "vitest",
-    "test:ui": "vitest --ui",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "type-check": "tsc --noEmit",
-    "solve": "bash scripts/solve.sh",
-    "progress": "bash scripts/progress.sh",
-    "check-updates": "pnpm outdated",
-    "update-deps": "pnpm update --interactive"
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.0.0",
-    "@total-typescript/ts-reset": "^0.5.1",
+    "@antfu/eslint-config": "^2.6.0",
     "@type-challenges/utils": "^0.1.1",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
-    "@vitest/ui": "^1.3.0",
     "eslint": "^8.57.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.4.0",
-    "vitest": "^1.3.0"
+    "typescript": "^5.4.0"
   }
 }
