chore: npm スクリプト名を type-check から check に変更

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@8.15.0",
   "type": "module",
   "scripts": {
-    "type-check": "tsc --noEmit"
+    "check": "tsc --noEmit"
   },
   "devDependencies": {
     "@type-challenges/utils": "^0.1.1",
