refactor: 未使用のユーティリティとテスト設定を削除
- utils ディレクトリとそのパスエイリアスを削除
- vitest.config.ts を削除してテスト設定を簡素化
- tsconfig.json から不要な include と paths の設定を除去

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,13 +31,11 @@
     "paths": {
       "@challenges/*": ["original-type-challenges/questions/*"],
       "@solutions/*": ["solutions/*"],
-      "@utils/*": ["utils/*"],
       "@type-challenges/utils": ["original-type-challenges/utils"]
     }
   },
   "include": [
-    "solutions/**/*.ts",
-    "utils/**/*.ts"
+    "solutions/**/*.ts"
   ],
   "exclude": [
     "node_modules",
