--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,41 +21,10 @@
           "**/dist": true
         },
         "typescript.tsdk": "node_modules/typescript/lib",
-        "prettier.semi": false,
         "typescript.format.semicolons": "remove",
         "javascript.format.semicolons": "remove",
-        "eslint.useFlatConfig": true,
         "prettier.enable": false,
-        "editor.formatOnSave": false,
-        "editor.codeActionsOnSave": {
-          "source.fixAll.eslint": "explicit",
-          "source.organizeImports": "never"
-        },
-        "eslint.rules.customizations": [
-          { "rule": "style/*", "severity": "off" },
-          { "rule": "format/*", "severity": "off" },
-          { "rule": "*-indent", "severity": "off" },
-          { "rule": "*-spacing", "severity": "off" },
-          { "rule": "*-spaces", "severity": "off" },
-          { "rule": "*-order", "severity": "off" },
-          { "rule": "*-dangle", "severity": "off" },
-          { "rule": "*-newline", "severity": "off" },
-          { "rule": "*quotes", "severity": "off" },
-          { "rule": "*semi", "severity": "off" }
-        ],
-        "eslint.validate": [
-          "javascript",
-          "javascriptreact",
-          "typescript",
-          "typescriptreact",
-          "vue",
-          "html",
-          "markdown",
-          "json",
-          "jsonc",
-          "yaml",
-          "toml"
-        ]
+        "editor.formatOnSave": false
       },
       "extensions": [
         "streetsidesoftware.code-spell-checker",
