--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,9 @@
       "extensions": [
         "streetsidesoftware.code-spell-checker",
         "yzhang.markdown-all-in-one",
-        "DavidAnson.vscode-markdownlint"
+        "DavidAnson.vscode-markdownlint",
+        "ms-vscode.vscode-typescript-next",
+        "yoavbls.pretty-ts-errors"
       ]
     }
   },
